--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/lolPants/ws-relay/issues"
   },
-  "homepage": "https://github.com/lolPants/ws-relay#readme"
+  "homepage": "https://github.com/lolPants/ws-relay#readme",
+  "devDependencies": {
+    "eslint": "^5.9.0"
+  }
 }
