--- a/package.json
+++ b/package.json
@@ -24,5 +24,12 @@
   "homepage": "https://github.com/lolPants/ws-relay#readme",
   "devDependencies": {
     "eslint": "^5.9.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "morgan": "^1.9.1",
+    "ws": "^6.1.0"
   }
 }
