--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
+    "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "express-ipfilter": "^0.3.1",
     "morgan": "^1.9.1",
     "ws": "^6.1.0"
   }
