--- a/package.json
+++ b/package.json
@@ -16,8 +16,20 @@
     "watch": "tsc --watch",
     "dev": "npm run watch -- --sourceMap"
   },
+  "dependencies": {
+    "@koa/cors": "^3.0.0",
+    "koa": "^2.7.0",
+    "koa-bodyparser": "^4.2.1",
+    "signale": "^1.4.0",
+    "ws": "^6.2.1"
+  },
   "devDependencies": {
+    "@types/koa": "^2.0.48",
+    "@types/koa-bodyparser": "^4.2.2",
+    "@types/koa__cors": "^2.2.3",
     "@types/node": "^11.13.7",
+    "@types/signale": "^1.2.1",
+    "@types/ws": "^6.0.1",
     "prettier": "^1.17.0",
     "tslint": "^5.16.0",
     "tslint-config-prettier": "^1.18.0",
