--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   },
   "dependencies": {
     "@koa/cors": "^3.0.0",
+    "dotenv": "^7.0.0",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "signale": "^1.4.0",
     "ws": "^6.2.1"
   },
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/koa": "^2.0.48",
     "@types/koa-bodyparser": "^4.2.2",
     "@types/koa__cors": "^2.2.3",
